# openai-service

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
openai_service/: main.py
openai_service/config/: config.py  prompts.py
openai_service/routers/: translation.py
openai_service/service/: translation.py
