[tool.poetry]
name = "openai-service"
version = "0.1.0"
description = "service for interacting with openai apis"
authors = ["syz51 <syzroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.9"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
pydantic-settings = "^2.1.0"
langchain = "^0.0.350"
langserve = { extras = ["server"], version = "^0.0.36" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
